[tool.poetry]
name = "py-web-hw-8"
version = "0.1.0"
description = ""
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = {extras = ["srv", "tls"], version = "^4.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
